# Magen

./: .gitignore  ATTESTATION_SPEC.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: run.py
benchmarks/dataset/: clean_calculator.json  clean_calculator.label.json  clean_database.json  clean_database.label.json  clean_long_description.json  clean_long_description.label.json  clean_weather.json  clean_weather.label.json  inject_base64_description.json  inject_base64_description.label.json  inject_base64_field.json  inject_base64_field.label.json  inject_blunt_override.json  inject_blunt_override.label.json  inject_curl_exfil.json  inject_curl_exfil.label.json  inject_developer_mode.json  inject_developer_mode.label.json  inject_excessive_perms.json  inject_excessive_perms.label.json  inject_false_attribution.json  inject_false_attribution.label.json  inject_forced_chaining.json  inject_forced_chaining.label.json  inject_forced_invocation.json  inject_forced_invocation.label.json  (+20 more)
examples/: agent_integration.py  clean_tool.json  framework_integration.py  malicious_tool.json  real_filesystem_mcp.json  real_github_mcp.json  real_slack_mcp.json  real_supabase_mcp.json  sneaky_tool.json  verify_attestation.py
magen/: __init__.py  loader.py  models.py  pipeline.py  registry.py
schemas/: toolvet-attestation.schema.json
scripts/: verify_split.py
tests/: __init__.py  test_integration.py  test_pipeline.py  test_toolvet_sdk.py
toolvet/: __init__.py  client.py  hash.py  loader.py  mcp_registry.py  models.py  pipeline.py  verify.py
(+13 files in other folders)
